Fix the bullet list alignment with image issue

--- a/css/gotyourback.css
+++ b/css/gotyourback.css
@@ -22,5 +22,24 @@
     color: #f4ab1b;
 }
 
-ul.bullet {list-style-position:outside;}
+/* 
+ * This style makes sure that wrapped bullet lists indent and keep the bullet outside of the text.
+ * It also removes any padding on these lists to ensure that the layout using  class:vertical-align (below)
+ * don't have unnecessary margin padding above or below the bullet list.
+ */
+ul.bullet {
+    list-style-position:outside;
+    margin: 0;
+}
 
+
+/* 
+ * This style supports rows that center each column (image in one column and list of bullets in next column) in each section.
+ * 
+ * This proposed solution came from: http://stackoverflow.com/questions/20547819/vertical-align-with-bootstrap-3 
+ */
+
+.vertical-align {
+    display: flex;
+    align-items: center;
+}
